--- a/src/assets/css/variables.css
+++ b/src/assets/css/variables.css
@@ -39,7 +39,7 @@
     --code-function: var(--nord8);
 
     /* typography */
-    --font-base: Georgia, Times, 'Times New Roman', serif;
+    --font-base: 'Atkinson Hyperlegible', sans-serif;
     --font-headings: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     --font-quote: var();
     --font-mono: "Fira Code", Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
