--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -2,21 +2,11 @@
 
     {% include "switch-darkmode.njk" %}
 
-	<form
-  		action="https://buttondown.email/api/emails/embed-subscribe/nebulanix"
-  		method="post"
-  		target="popupwindow"
-  		onsubmit="window.open('https://buttondown.email/nebulanix', 'popupwindow')"
-  		class="embeddable-buttondown-form"
-	>
-  		<label for="bd-email">Enter your email</label>
-  		<input type="email" name="email" id="bd-email" />
-  
-  		<input type="submit" value="Subscribe" />
-  		<p>
-    		<a href="https://buttondown.email/refer/nebulanix" target="_blank">Powered by Buttondown.</a>
-  		</p>
-	</form>
+	<iframe
+		scrolling="no"
+		style="width:100%!important;height:220px;border:1px #ccc solid !important"
+		src="https://buttondown.email/nebulanix?as_embed=true"
+	></iframe>
 
     <a href="{{ "/feed/feed.xml" | locale_url }}" class="rss-icon" aria-label="{{ 'meta.rssTitle' | translate }}" >
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-labelledby="icon-rss" role="img" width="24" height="24">
