--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,20 +1,17 @@
 <footer id="footer" class="footer">
 
     {% include "switch-darkmode.njk" %}
-
+	
 	<form
-  		action="https://buttondown.email/api/emails/embed-subscribe/nebulanix"
+		action="https://buttondown.email/api/emails/embed-subscribe/nebulanix"
   		method="post"
   		target="popupwindow"
   		onsubmit="window.open('https://buttondown.email/nebulanix', 'popupwindow')"
   		class="embeddable-buttondown-form"
 	>
-  		<input type="email" name="email" id="bd-email" placeholder="Your email (you@example.com)" required />
-  
-  		<input type="submit" value="Subscribe" />
-  		<p>
-    		<a href="https://buttondown.email/refer/nebulanix" target="_blank">Powered by Buttondown.</a>
-  		</p>
+  		<label for="email">Subscribe to our mailing list (powered by <a href="https://buttondown.email/refer/nebulanix" target="_blank">Buttondown</a>)</label>
+  		<input type="email" value="" name="email" placeholder="Your email (you@example.com)" id="bd-email" required>
+  		<input type="submit" value="Subscribe" name="subscribe">
 	</form>
 
     <a href="{{ "/feed/feed.xml" | locale_url }}" class="rss-icon" aria-label="{{ 'meta.rssTitle' | translate }}" >
