--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -489,48 +489,102 @@ a[aria-current="page"] {
 }
 
 .embeddable-buttondown-form {
-	width: 100%;
-	box-shadow: none;
-	border: 0;
-	text-align: center;
-}
-
-.embeddable-buttondown-form input[type="email"] {
-	padding: .5rem 1.25rem;
-  	color: #1f2937;
-  	font-size: 1rem;
-  	line-height: 1.5rem;
-  	font-weight: 500;
-  	-webkit-box-flex: 1;
-  	-ms-flex: 1 1 0%;
-  	flex: 1 1 0%;
-  	border-radius: 9999px;
-  	border-width: 1px;
-  	border-color: transparent;
-}
-
-.embeddable-buttondown-form input[type="submit"] {
-	display: -webkit-box;
-  	display: -ms-flexbox;
-  	display: flex;
-  	padding: .5rem 1.25rem;
-  	color: #fff;
-  	font-size: 1rem;
-  	line-height: 1.5rem;
-  	font-weight: 500;
+	width: 400px;
+  	margin: 0 auto;
   	text-align: center;
-  	text-decoration: none;
-  	-webkit-box-flex: 1;
-  	-ms-flex: 1 1 0%;
-  	flex: 1 1 0%;
-  	-webkit-box-align: center;
-  	-ms-flex-align: center;
-  	align-items: center;
-  	border-radius: 9999px;
-  	border-width: 1px;
-  	border-color: transparent;
-  	cursor: pointer;
-  	-webkit-box-shadow: 0 1px 2px 0 rgba(0,0,0,.05);
-  	box-shadow: 0 1px 2px #0000000d;
-	background-color: #4338ca;
+  	position: relative;
+  	&:after {
+    	content: "Enter your email and click on subscribe";
+    	color: var(--foreground-soft);
+    	font-size: 0.9em;
+  	}
 }
+
+.embeddable-buttondown-form label {
+	color: var(--foreground-soft);
+	display: table-cell;
+	vertical-align: bottom;
+	width: 400px;
+	height: 30px;
+	&:before {
+	  content: "\f1d8";
+	  font-family: fontAwesome;
+	  margin-right: 10px;
+	  color: var(--foreground-soft);
+	}
+  }
+
+.embeddable-buttondown-form input {
+	height: 50px;
+	line-height: 50px;
+	padding: 0 20px;
+	font: inherit;
+	&[type="email"] {
+	  display: block;
+	  width: 100%;
+	  background-color: #fff;
+	  border-radius: 10px;
+	  border: 1px solid var(--foreground-soft);
+	  margin: 10px 0;   
+	  -webkit-transition: border-color 0.4s ease 0, padding-right 0.2s ease 0.2s;
+	  -moz-transition: border-color 0.4s ease 0, padding-right 0.2s ease 0.2s;
+	  -o-transition: border-color 0.4s ease 0, padding-right 0.2s ease 0.2s;
+	  transition: border-color 0.4s ease 0, padding-right 0.2s ease 0.2s;
+	  &:focus {
+		outline: none;
+		border-color: var(--nord14);
+		padding-right: 120px;
+		-webkit-transition: padding-right 0.2s ease 0 !important;
+		-moz-transition: padding-right 0.2s ease 0 !important;
+		-o-transition: padding-right 0.2s ease 0 !important;
+		transition: padding-right 0.2s ease 0 !important;
+		+ input[type="submit"] {
+		  visibility: visible;
+		  opacity: 1;
+		  border-color: var(--nord14);
+		}
+	  }
+	}
+	&[type="submit"] {
+	  border: none;
+	  border-left: 1px solid var(--foreground-soft);
+	  border-top-right-radius: 10px;
+	  border-bottom-right-radius: 10px;
+	  color: var(--nord14);
+	  background-color: inherit;
+	  cursor: pointer;
+	  position: absolute;
+	  right: -1px;
+	  top: 40px;
+	  visibility: hidden;
+	  opacity: 0;
+	  -webkit-transition: all 0.4s ease 0;
+	  -moz-transition: all 0.4s ease 0;
+	  -o-transition: all 0.4s ease 0;
+	  transition: all 0.4s ease 0;
+	  &:hover {
+		background-color: var(--nord14);
+		color: #fff;
+	  }
+	}
+  }
+  
+  ::-webkit-input-placeholder {
+	 text-transform: capitalize;
+  }
+  
+  :-moz-placeholder {
+	 text-transform: capitalize;  
+  }
+  
+  ::-moz-placeholder {
+	 text-transform: capitalize;  
+  }
+  
+  :-ms-input-placeholder {  
+	 text-transform: capitalize;
+  }
+  
+  input:-webkit-autofill {
+	  -webkit-box-shadow: 0 0 0px 1000px #fff inset;
+  }
