--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -493,11 +493,12 @@ a[aria-current="page"] {
   	margin: 0 auto;
   	text-align: center;
   	position: relative;
-  	&:after {
-    	content: "Enter your email and click on subscribe";
-    	color: var(--foreground-soft);
-    	font-size: 0.9em;
-  	}
+}
+
+.embeddable-buttondown-form:after {
+   	content: "Enter your email and click on subscribe";
+   	color: var(--foreground-soft);
+   	font-size: 0.9em;
 }
 
 .embeddable-buttondown-form label {
@@ -506,85 +507,90 @@ a[aria-current="page"] {
 	vertical-align: bottom;
 	width: 400px;
 	height: 30px;
-	&:before {
-	  content: "\f1d8";
-	  font-family: fontAwesome;
-	  margin-right: 10px;
-	  color: var(--foreground-soft);
-	}
-  }
+}
+
+ .embeddable-buttondown-form label:before {
+	content: "\f1d8";
+	font-family: fontAwesome;
+	margin-right: 10px;
+	color: var(--foreground-soft);
+}
 
 .embeddable-buttondown-form input {
 	height: 50px;
 	line-height: 50px;
 	padding: 0 20px;
 	font: inherit;
-	&[type="email"] {
-	  display: block;
-	  width: 100%;
-	  background-color: #fff;
-	  border-radius: 10px;
-	  border: 1px solid var(--foreground-soft);
-	  margin: 10px 0;   
-	  -webkit-transition: border-color 0.4s ease 0, padding-right 0.2s ease 0.2s;
-	  -moz-transition: border-color 0.4s ease 0, padding-right 0.2s ease 0.2s;
-	  -o-transition: border-color 0.4s ease 0, padding-right 0.2s ease 0.2s;
-	  transition: border-color 0.4s ease 0, padding-right 0.2s ease 0.2s;
-	  &:focus {
-		outline: none;
-		border-color: var(--nord14);
-		padding-right: 120px;
-		-webkit-transition: padding-right 0.2s ease 0 !important;
-		-moz-transition: padding-right 0.2s ease 0 !important;
-		-o-transition: padding-right 0.2s ease 0 !important;
-		transition: padding-right 0.2s ease 0 !important;
-		+ input[type="submit"] {
-		  visibility: visible;
-		  opacity: 1;
-		  border-color: var(--nord14);
-		}
-	  }
-	}
-	&[type="submit"] {
-	  border: none;
-	  border-left: 1px solid var(--foreground-soft);
-	  border-top-right-radius: 10px;
-	  border-bottom-right-radius: 10px;
-	  color: var(--nord14);
-	  background-color: inherit;
-	  cursor: pointer;
-	  position: absolute;
-	  right: -1px;
-	  top: 40px;
-	  visibility: hidden;
-	  opacity: 0;
-	  -webkit-transition: all 0.4s ease 0;
-	  -moz-transition: all 0.4s ease 0;
-	  -o-transition: all 0.4s ease 0;
-	  transition: all 0.4s ease 0;
-	  &:hover {
-		background-color: var(--nord14);
-		color: #fff;
-	  }
-	}
-  }
+}
+
+.embeddable-buttondown-form input[type="submit"] {
+	border: none;
+	border-left: 1px solid var(--foreground-soft);
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
+	color: var(--nord14);
+	background-color: inherit;
+	cursor: pointer;
+	position: absolute;
+	right: -1px;
+	top: 40px;
+	visibility: hidden;
+	opacity: 0;
+	-webkit-transition: all 0.4s ease 0;
+	-moz-transition: all 0.4s ease 0;
+	-o-transition: all 0.4s ease 0;
+	transition: all 0.4s ease 0;
+}
+.embeddable-buttondown-form input[type="submit"]:hover {
+	background-color: var(--nord14);
+	color: #fff;
+}
+
+.embeddable-buttondown-form input[type="email"] {
+	display: block;
+	width: 100%;
+	background-color: #fff;
+	border-radius: 10px;
+	border: 1px solid var(--foreground-soft);
+	margin: 10px 0;   
+	-webkit-transition: border-color 0.4s ease 0, padding-right 0.2s ease 0.2s;
+	-moz-transition: border-color 0.4s ease 0, padding-right 0.2s ease 0.2s;
+	-o-transition: border-color 0.4s ease 0, padding-right 0.2s ease 0.2s;
+	transition: border-color 0.4s ease 0, padding-right 0.2s ease 0.2s;
+}
+
+.embeddable-buttondown-form input[type="email"]:focus {
+	outline: none;
+	border-color: var(--nord14);
+	padding-right: 120px;
+	-webkit-transition: padding-right 0.2s ease 0 !important;
+	-moz-transition: padding-right 0.2s ease 0 !important;
+	-o-transition: padding-right 0.2s ease 0 !important;
+	transition: padding-right 0.2s ease 0 !important;
+}
+
+.embeddable-buttondown-form input[type="email"]:focus input[type="submit"] {
+	visibility: visible;
+	opacity: 1;
+	border-color: var(--nord14);
+}
   
-  ::-webkit-input-placeholder {
-	 text-transform: capitalize;
-  }
+::-webkit-input-placeholder {
+	text-transform: capitalize;
+}
   
-  :-moz-placeholder {
-	 text-transform: capitalize;  
-  }
+:-moz-placeholder {
+	text-transform: capitalize;  
+}
   
-  ::-moz-placeholder {
-	 text-transform: capitalize;  
-  }
+::-moz-placeholder {
+	text-transform: capitalize;  
+}
   
-  :-ms-input-placeholder {  
-	 text-transform: capitalize;
-  }
+:-ms-input-placeholder {  
+	text-transform: capitalize;
+}
   
-  input:-webkit-autofill {
-	  -webkit-box-shadow: 0 0 0px 1000px #fff inset;
-  }
+input:-webkit-autofill {
+	-webkit-box-shadow: 0 0 0px 1000px #fff inset;
+}
