updating spacing and font sizes

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,7 +1,7 @@
 <footer id="footer" class="footer">
 
     {% include "switch-darkmode.njk" %}
-	
+
 	<form
 		action="https://buttondown.email/api/emails/embed-subscribe/nebulanix"
   		method="post"
@@ -10,7 +10,7 @@
   		class="embeddable-buttondown-form"
 	>
   		<label for="email">Subscribe to our mailing list (powered by <a href="https://buttondown.email/refer/nebulanix" target="_blank">Buttondown</a>)</label>
-  		<input type="email" value="" name="email" placeholder="Your email (you@example.com)" id="bd-email" required>
+  		<input type="email" value="" name="email" placeholder="email address" id="bd-email" required>
   		<input type="submit" value="Subscribe" name="subscribe">
 	</form>
 
