--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -489,7 +489,7 @@ a[aria-current="page"] {
 }
 
 form {
-	width: 400px;
+	width: var(--form-width);
 	margin: 0 auto;
 	text-align: center;
 	position: relative;
@@ -497,26 +497,26 @@ form {
 form:after {
 	content: "Enter your email and click on subscribe";
 	color: #BBBBBB;
-	font-size: 12px;
+	font-size: var(--step--1);
 }
 label {
 	color: #808080;
-	font-size: 18px;
+	font-size: var(--step-0);
 	display: table-cell;
 	vertical-align: bottom;
-	width: 400px;
-	height: 30px;
+	width: var(--form-width);
+	height: var(--label-height);
 }
 label:before {
 	content: "\f1d8";
 	font-family: fontAwesome;
-	margin-right: 10px;
+	margin-right: calc(var(--gutter) / 4);
 	color: #808080;
 }
 input {
 	height: 50px;
 	line-height: 50px;
-	padding: 0 20px;
+	padding: 0 calc(var(--gutter) / 2);
 	font: inherit;
 }
 input[type="email"] {
@@ -525,7 +525,7 @@ input[type="email"] {
 	background-color: #FFFFFF;
 	border-radius: 10px;
 	border: 1px solid #808080;
-	margin: 10px 0;
+	margin: var(--input-margin) 0;
 	-webkit-transition: border-color 0.4s ease 0, padding-right 0.2s ease 0.2s;
 	-moz-transition: border-color 0.4s ease 0, padding-right 0.2s ease 0.2s;
 	-o-transition: border-color 0.4s ease 0, padding-right 0.2s ease 0.2s;
@@ -555,7 +555,7 @@ input[type="submit"] {
 	cursor: pointer;
 	position: absolute;
 	right: -1px;
-	top: 40px;
+	top: calc(var(--label-height) + var(--input-margin));
 	visibility: hidden;
 	opacity: 0;
 	-webkit-transition: all 0.4s ease 0;
