--- a/src/assets/css/variables.css
+++ b/src/assets/css/variables.css
@@ -57,6 +57,9 @@
     --tracking: -0.02ch;
     --tracking-s: -0.055ch;
     --gutter: var(--space-s-m);
+	--input-margin: var(--gutter) / 4;
+	--form-width: 550px;
+	--label-height: 30px;
     --border-radius: var(--step-0);
     /* @link https://utopia.fyi/space/calculator?c=320,18,1.2,1500,22,1.333,6,1,800&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l|m-3xl|s-2xl&g=s,l,xl,12 */
     --space-3xs: clamp(0.31rem, calc(0.30rem + 0.08vw), 0.38rem);
