--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -9,7 +9,7 @@
   		onsubmit="window.open('https://buttondown.email/nebulanix', 'popupwindow')"
   		class="embeddable-buttondown-form"
 	>
-  		<label for="email">Subscribe to our mailing list (powered by <a href="https://buttondown.email/refer/nebulanix" target="_blank">Buttondown</a>)</label>
+  		<label for="email">Subscribe to my newsletter (powered by <a href="https://buttondown.email/refer/nebulanix" target="_blank">Buttondown</a>)</label>
   		<input type="email" value="" name="email" placeholder="email address" id="bd-email" required>
   		<input type="submit" value="Subscribe" name="subscribe">
 	</form>
